<resources>
    <string name="app_name">Acarreos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_user_login">Usuario</string>
    <string name="hint_pass_login">Contraseña</string>
    <string name="login">Login</string>
    <string name="register">+ REGÍSTRATE</string>
    <string name="registrate">+ REGÍSTRATE</string>
    <string name="title_activity_activity_cliente">ActivityCliente</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="conectando">Conectando...</string>
    <string name="no_envios">Sin envíos</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="login_form">Login</string>
    <string name="pass_form">Contraseña</string>
    <string name="re_enter_pass">Reingrese contraseña</string>
    <string name="email">Email</string>
    <string name="fecha_nacimiento">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="cliente">Cliente</string>
    <string name="transportista">Transportista</string>
    <string name="act_datos">Actualizar datos</string>
    <string name="registrar">REGISTRAR</string>
    <string name="guardar">Guardar</string>
    <string name="espere">Espere un momento...</string>
    <string name="titulo">Título</string>
    <string name="hasta">Hasta</string>
    <string name="desde">Desde</string>
    <string name="cancelar">Cancelar</string>
    <string name="max_dias">Máximos de días para entregar</string>
    <string name="add_producto">Agregar Producto</string>
    <string name="no_productos">Sin productos</string>
    <string name="categoria">Categoría</string>
    <string name="no_ofertas">Sin ofertas</string>
    <string name="salida">Salida</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="llegada">Llegada</string>
    <string name="posicion">Posicion</string>
    <string name="reference_dir">Dirección de referencia</string>
    <string name="tipo_trans">Tipos de transporte</string>
    <string name="ofertar">Ofertar</string>
    <string name="precio">Precio</string>
    <string name="dia_recogida">Día de recogida</string>
    <string name="hora_recogida">Hora de recogida</string>
    <string name="dia_entrega">Día de entrega</string>
    <string name="hora_entrega">Hora de entrega</string>
    <string name="tipo">Tipo</string>
    <string name="add_transporte">Agregar transporte</string>
    <string name="no_tipo_transporte">Sin transportes</string>
    <string name="buscar_envios">Buscar envíos</string>
    <string name="no_envios_ganado">Aún no has ganado una oferta</string>
    <string name="deja_comment">Deja tu comentario</string>
    <string name="valora">Valora el servicio</string>
    <string name="avisar_entrega">Avisar entrega</string>
    <string name="envio">Envío:</string>
    <string name="avanzar">Avanzar</string>
    <string name="siguiente">Siguiente</string>
    <string name="enviar">Enviar</string>
    <string name="sugerencia">Fecha sugerida para entrega</string>
    <string name="sugerencia_hora">Hora sugerida para entrega</string>
    <string name="tipo_dni">Tipo Identificación</string>
    <string name="num_seguridad">Número de Seguridad</string>
    <string name="tipo_licencia">Tipo de Licencia</string>
    <string name="dni">Documento de identidad</string>
    <string name="licencia">Licencia</string>
    <string name="int_payment_sata">Por favor introduce tus datos de pago:</string>
    <string name="address">Dirección</string>
    <string name="zip_code">Código Postal</string>
    <string name="address_2">Dirección 2</string>
    <string name="factura">Factura</string>
</resources>
