<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/toolBarValorar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_color"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_launcher" />

        <com.acarreos.creative.CustomViews.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/imgApp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="30dp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolBarValorar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.acarreos.creative.CustomViews.RobotoTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/envio"
                        android:textSize="30dp" />

                    <com.acarreos.creative.CustomViews.RobotoTextView
                        android:id="@+id/txtEnvioTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="Titulo Envío"
                        android:textColor="@color/colorAccent"
                        android:textSize="30dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginRight="10dp"
                        android:src="@drawable/icon_trans_flat_gray" />

                    <com.acarreos.creative.CustomViews.RobotoTextView
                        android:id="@+id/textTransEnvio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="enma21498"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                </LinearLayout>

                <com.acarreos.creative.CustomViews.RobotoTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:text="@string/valora"
                    android:textColor="@color/primary_color"
                    android:textSize="30dp" />

                <RatingBar
                    android:id="@+id/ratingEnvio"
                    style="?android:attr/ratingBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:numStars="5"
                    android:stepSize="1" />

                <EditText
                    android:id="@+id/textComentario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/apptheme_edit_text_holo_light"
                    android:hint="@string/deja_comment"
                    android:lines="4"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/gray_text" />

                <com.dd.ShadowLayout
                    android:id="@+id/btnValorar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:sl_cornerRadius="2dp"
                    app:sl_dx="2dp"
                    app:sl_dy="2dp"
                    app:sl_shadowColor="#AA000000">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/square_corner_blue"
                        android:gravity="center"
                        android:paddingBottom="16dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingTop="16dp"
                        android:text="@string/avisar_entrega"
                        android:textColor="@color/white"
                        android:textSize="20dp" />

                </com.dd.ShadowLayout>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>


</RelativeLayout>